# phase-csharp

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt  PhaseCSharp.sln  README.md  abstractstereocamera_8cs.html  abstractstereocamera_8cs_source.html  abstractstereomatcher_8cs.html  abstractstereomatcher_8cs_source.html  annotated.html  annotated_dup.js  cameracalibration_8cs.html  cameracalibration_8cs_source.html  cameradeviceinfo_8cs.html  cameradeviceinfo_8cs_source.html  class_i3_d_r_1_1_c_phase_1_1_c_utils-members.html  class_i3_d_r_1_1_c_phase_1_1_c_utils.html  class_i3_d_r_1_1_c_phase_1_1_c_utils.js  class_i3_d_r_1_1_c_phase_1_1_c_version-members.html  class_i3_d_r_1_1_c_phase_1_1_c_version.html  class_i3_d_r_1_1_c_phase_1_1_c_version.js  class_i3_d_r_1_1_c_phase_1_1_calib_1_1_c_camera_calibration-members.html  class_i3_d_r_1_1_c_phase_1_1_calib_1_1_c_camera_calibration.html  class_i3_d_r_1_1_c_phase_1_1_calib_1_1_c_camera_calibration.js  class_i3_d_r_1_1_c_phase_1_1_calib_1_1_c_stereo_camera_calibration-members.html  class_i3_d_r_1_1_c_phase_1_1_calib_1_1_c_stereo_camera_calibration.html  class_i3_d_r_1_1_c_phase_1_1_calib_1_1_c_stereo_camera_calibration.js  class_i3_d_r_1_1_c_phase_1_1_stereo_camera_1_1_c_abstract_stereo_camera-members.html  class_i3_d_r_1_1_c_phase_1_1_stereo_camera_1_1_c_abstract_stereo_camera.html  class_i3_d_r_1_1_c_phase_1_1_stereo_camera_1_1_c_abstract_stereo_camera.js  class_i3_d_r_1_1_c_phase_1_1_stereo_camera_1_1_c_camera_device_info-members.html  class_i3_d_r_1_1_c_phase_1_1_stereo_camera_1_1_c_camera_device_info.html  class_i3_d_r_1_1_c_phase_1_1_stereo_camera_1_1_c_camera_device_info.js  class_i3_d_r_1_1_c_phase_1_1_stereo_camera_1_1_c_deimos_stereo_camera-members.html  class_i3_d_r_1_1_c_phase_1_1_stereo_camera_1_1_c_deimos_stereo_camera.html  class_i3_d_r_1_1_c_phase_1_1_stereo_camera_1_1_c_deimos_stereo_camera.js  class_i3_d_r_1_1_c_phase_1_1_stereo_camera_1_1_c_phobos_stereo_camera-members.html  class_i3_d_r_1_1_c_phase_1_1_stereo_camera_1_1_c_phobos_stereo_camera.html  class_i3_d_r_1_1_c_phase_1_1_stereo_camera_1_1_c_phobos_stereo_camera.js  (+423 more)
.github/: CONTRIBUTOR.md  MAINTAINER.md
.github/workflows/: build.yml  pull_request.yml  release.yml
.phase_test/: depth.avi
core/: rgbdvideostream.cs  rgbdvideowriter.cs  stereoprocess.cs
core/calib/: cameracalibration.cs  stereocalibration.cs
core/stereocamera/: stereocamera.cs  uvcstereocamera.cs
core/stereomatcher/: abstractstereomatcher.cs  stereobm.cs  stereohobm.cs  stereoi3drsgm.cs
core/types/: common.cs  mat.cs
docs/: README_developer.md  README_external.md  gen_docs.sh
docs/doxygen/: Doxyfile  Doxyfile_developer  Doxyfile_external  README_docs.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  files_2.js  (+43 more)
src/: AssemblyInfo.cs.template  phasecsharp.csproj  phaseversion.cs  rgbdvideostream.cs  rgbdvideowriter.cs  stereoprocess.cs  stereovision.cs  utils.cs
src/calib/: cameracalibration.cs  stereocalibration.cs
src/cphase/: utils.cs  version.cs
src/cphase/calib/: cameracalibration.cs  stereocalibration.cs
src/cphase/stereocamera/: abstractstereocamera.cs  cameradeviceinfo.cs  deimosstereocamera.cs  phobosstereocamera.cs  pylonstereocamera.cs  stereocamera.cs  titaniastereocamera.cs  uvcstereocamera.cs
src/cphase/stereomatcher/: abstractstereomatcher.cs  stereobm.cs  stereohobm.cs  stereoi3drsgm.cs  stereomatcher.cs  stereosgbm.cs
src/cphase/types/: mat.cs  stereo.cs
src/phase/: utils.cs  version.cs
src/phase/calib/: cameracalibration.cs  stereocalibration.cs
src/phase/stereocamera/: abstractstereocamera.cs  cameradeviceinfo.cs  deimosstereocamera.cs  phobosstereocamera.cs  pylonstereocamera.cs  stereocamera.cs  titaniastereocamera.cs  uvcstereocamera.cs
src/phase/stereomatcher/: abstractstereomatcher.cs  stereobm.cs  stereohobm.cs  stereoi3drsgm.cs  stereomatcher.cs  stereosgbm.cs
src/phase/types/: mat.cs  stereo.cs
src/stereocamera/: abstractstereocamera.cs  cameradeviceinfo.cs  deimosstereocamera.cs  phobosstereocamera.cs  pylonstereocamera.cs  stereocamera.cs  titaniastereocamera.cs  uvcstereocamera.cs
src/stereomatcher/: abstractstereomatcher.cs  stereobm.cs  stereohobm.cs  stereoi3drsgm.cs  stereomatcher.cs  stereosgbm.cs
src/types/: cameradeviceinfo.cs  common.cs  mat.cs  stereo.cs
test/demo/demo_calib_from_images/: demo_calib_from_images.cs  phasecsharp-demo-calib-from-images.csproj
test/demo/demo_cam_match/: demo_cam_match.cs
test/demo/demo_cam_match_thread/: demo_cam_match_thread.cs  phasecsharp-demo-cam-match-thread.csproj
test/demo/demo_cam_read/: demo_cam_read.cs  phasecsharp-demo-cam-read.csproj
test/demo/demo_cam_read_thread/: demo_cam_read_thread.cs  phasecsharp-demo-cam-read-thread.csproj
test/demo/demo_list_cameras/: demo_list_cameras.cs  phasecsharp-demo-list-cameras.csproj
test/demo/demo_titania_read/: demo_titania_read.cs  phasecsharp-demo-titania-read.csproj
test/drivers/: PhaseCSharp.drivers.csproj  demo_cam_read.cs  demo_rgbd.cs
test/drivers/demo_cam_read/: PhaseCSharp.demo_cam_read.csproj  demo_cam_read.cs  phasecsharp-demo-cam-read.csproj
test/drivers/demo_rgbd/: demo_rgbd.cs  phasecsharp-demo-rgbd.csproj
test/perf/: phasecsharp-perf-test.csproj  test_utils.cs
test/perf/calib/: test_cameracalibration.cs  test_stereocalibration.cs
test/perf/stereocamera/: test_abstractstereocamera.cs  test_deimosstereocamera.cs  (+4 more)
test/src/: PhaseCSharp.test.csproj  phasecsharp-test.csproj  test_rgbdvideostream.cs  test_rgbdvideowriter.cs  test_stereoprocess.cs  test_stereovision.cs  test_utils.cs
test/unit/: phasecsharp-unit-test.csproj  test_utils.cs
(+29 files in other folders)
